--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     	<h2 style="color:#F2B300;">生</h2>
     </div>
     <div class="balloons text-center" id="b2">
-    	<h2 style="color:#0719D4;">B=日</h2>
+    	<h2 style="color:#0719D4;">日</h2>
     </div>
 	<div class="balloons text-center" id="b3">
     	<h2 style="color:#D14D39;">快</h2>
