--- a/index.html
+++ b/index.html
@@ -104,40 +104,29 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
-				<p>Today is...</p>
-				<p>as beautiful as other days</p>
-				<p>but you realize</p>
-				<p>another year has gone</p>
-				<p>in a blink of the eyes</p>
-				<p><strong>however</strong></p>
-				<p>Do you know..?</p>
-				<p>today is just special</p>
-				<p>so special to you</p>
-				<p>that's why</p>
-				<p>Let's make it...</p>
-				<p>the best celebration ever</p>
-				<p>and let me share...</p>
-				<p>a piece of happiness to you</p>
-				<p>I made all this...</p>
-				<p>as a birthday present to you</p>
-				<p>thanks for being there</p>
-				<p>thanks for everything</p>
-				<p>I wish you all the best</p>
-				<p>May your life be at ease</p>
-				<p>May all your wishes come true</p>
+				<p>今天是</p>
+				<p>您的生日哦</p>
+				<p>希望往后的日子里</p>
+				<p>眼里是阳光</p>
+				<p>笑里是坦荡</p>
+				<p>感谢陪伴</p>
+				<p>感谢一切</p>
+				<p>希望您一帆风顺</p>
+				<p>梦想成真</p>
+				<p><strong>生日快乐</strong></p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
 			<div class="row">
 				<div class="col-md-6 text-center col-md-offset-3">
-					<button class="btn btn-primary" id="turn_on">Turn On Lights</button>
-					<button class="btn btn-primary" id="play">Play Music</button>
-					<button class="btn btn-primary" id="bannar_coming">Let's Decorate</button>
-					<button class="btn btn-primary" id="balloons_flying">Fly With Balloons</button>
-					<button class="btn btn-primary" id="cake_fadein">Most Delicious Cake Ever</button>
-					<button class="btn btn-primary" id="light_candle"> Light Candle</button>
-					<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
-					<button class="btn btn-primary" id="story">A mesage for you</button>
+					<button class="btn btn-primary" id="turn_on">开灯</button>
+					<button class="btn btn-primary" id="play">播放音乐</button>
+					<button class="btn btn-primary" id="bannar_coming">装饰一下</button>
+					<button class="btn btn-primary" id="balloons_flying">放飞气球</button>
+					<button class="btn btn-primary" id="cake_fadein">送上蛋糕</button>
+					<button class="btn btn-primary" id="light_candle"> 点燃蜡烛</button>
+					<button class="btn btn-primary" id="wish_message">生日快乐</button>
+					<button class="btn btn-primary" id="story">祝词</button>
 					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
 				</div>
 			</div>
