--- a/index.html
+++ b/index.html
@@ -119,14 +119,14 @@
 		<div class="navbar navbar-fixed-bottom">
 			<div class="row">
 				<div class="col-md-6 text-center col-md-offset-3">
-					<button class="btn btn-primary" id="turn_on">开灯</button>
+					<button class="btn btn-primary" id="turn_on">打开灯光</button>
 					<button class="btn btn-primary" id="play">播放音乐</button>
 					<button class="btn btn-primary" id="bannar_coming">装饰一下</button>
 					<button class="btn btn-primary" id="balloons_flying">放飞气球</button>
 					<button class="btn btn-primary" id="cake_fadein">送上蛋糕</button>
 					<button class="btn btn-primary" id="light_candle"> 点燃蜡烛</button>
 					<button class="btn btn-primary" id="wish_message">生日快乐</button>
-					<button class="btn btn-primary" id="story">祝词</button>
+					<button class="btn btn-primary" id="story">简短祝词</button>
 					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
 				</div>
 			</div>
